--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost/db_springboot_backend?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.username=sa
+spring.datasource.password=sa
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
+spring.jackson.time-zona=America/Caracas
+spring.jackson.locale=es_VE
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
